--- a/.github/workflows/Task2-main.yml
+++ b/.github/workflows/Task2-main.yml
@@ -1,29 +1,39 @@
-name: CI/CD Pipeline
+name: Deploy Strapi
 'on':
   push:
-    branches:
-      - main
-  pull_request:
     branches:
       - main
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version:
-          - 14.x
-          - 16.x
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v2
-      - name: 'Set up Node.js ${{ matrix.node-version }}'
+      - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '${{ matrix.node-version }}'
+          node-version: '14'
       - name: Install dependencies
         run: npm install
-      - name: Run tests
-        run: npm test
-      - name: Build application
+      - name: Build Strapi
         run: npm run build
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to EC2
+        uses: appleboy/ssh-action@master
+        with:
+          host: '${{ secrets.EC2_HOST }}'
+          username: ubuntu
+          key: '${{ secrets.EC2_KEY }}'
+          script: >
+            cd /home/ubuntu/strapi
+
+            git pull origin main
+
+            npm install --production  # Use `--production` flag for production
+            deployments
+
+            npm run build             # Ensure Strapi is built after updating
+            dependencies
